# RayTrace-

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  IHittable.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  ThreadPool.cpp  ThreadPool.hpp  Vbo.cpp  Vbo.hpp  main.cpp  stb_image.h  stb_image_write.h
libs/: CMakeLists.txt  glfw3.lib
libs/glad/: glad.c  glad.h
shaders/: Shader.cpp  Shader.hpp
